--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             overflow-x: hidden;
             box-sizing: border-box;
 Height:86px;
-        }.navbar {
+        }
+        *, *::before, *::after {
+            box-sizing: inherit;
+        }
+        .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
